src/tests/test-src/errors/E68-mod-404.syntran
// E68: mod-404
// A used module file could not be found

use nonexistent_module_xyz;
